# backup

./: .bashrc  .zshrc  CMakeLists.txt  README.md  keybindings-backup.dconf  meson.build  proj.bat  server.bat
Program Files/PostgreSQL/17/scripts/: custom.bat
Windows/: proj.bat  server.bat
home/a/: .zshrc  CMakeLists.txt
